<resources>
    <string name="app_name">Rawit</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password </string>
    <string name="prompt_retypepassword">Retype Password </string>
    <string name="prompt_first_name">First Name </string>
    <string name="prompt_last_name">Last Name </string>
    <string name="prompt_gender">Gender </string>
    <string name="prompt_birth_date">Birth Date  </string>
    <string name="prompt_weight">Weight </string>
    <string name="prompt_height">Height </string>
    <string name="prompt_level_of_act">Level of Activity </string>
    <string name="action_sign_up">Register</string>
    <string name="action_sign_in">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_match_password">This password is not match</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string-array name="gender">
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string-array name="activity">
        <item>High</item>
        <item>Moderate</item>
        <item>Low</item>
    </string-array>
</resources>
